--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.0",
         "laravel/boost": "^1.8",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
@@ -24,7 +25,10 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.1",
-        "pestphp/pest-plugin-laravel": "^4.0"
+        "pestphp/pest-plugin-laravel": "^4.0",
+        "tomasvotruba/cognitive-complexity": "^1.0",
+        "phpstan/phpstan": "^2.1",
+        "driftingly/rector-laravel": "^2.1.3"
     },
     "autoload": {
         "psr-4": {
@@ -55,6 +59,10 @@
             "@php artisan config:clear --ansi",
             "@php artisan test"
         ],
+        "rector:check": "vendor/bin/rector process --dry-run",
+        "rector:fix": "vendor/bin/rector process",
+        "pint:check": "vendor/bin/pint --test",
+        "pint:fix": "vendor/bin/pint",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
