--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "prettier:fix": "prettier --write ."
     },
     "devDependencies": {
+        "@commitlint/cli": "^19.0.0",
+        "@commitlint/config-conventional": "^19.0.0",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
+        "prettier": "^3.0.0",
+        "prettier-plugin-tailwindcss": "^0.7.2",
         "tailwindcss": "^4.0.0",
+        "validate-branch-name": "^1.3.1",
         "vite": "^7.0.7"
     }
 }
