--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
         "laravel-notification-channels/telegram": "^6.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "lorisleiva/laravel-actions": "^2.9"
     },
     "require-dev": {
+        "driftingly/rector-laravel": "^2.1.3",
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "^3.0",
         "laravel/boost": "^1.8",
@@ -26,9 +28,9 @@
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.1",
         "pestphp/pest-plugin-laravel": "^4.0",
-        "tomasvotruba/cognitive-complexity": "^1.0",
         "phpstan/phpstan": "^2.1",
-        "driftingly/rector-laravel": "^2.1.3"
+        "tomasvotruba/cognitive-complexity": "^1.0",
+        "wulfheart/laravel-actions-ide-helper": "^0.10.0"
     },
     "autoload": {
         "psr-4": {
