feat: update .env.example with Telegram bot token and Xdebug configuration

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,12 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+TELEGRAM_BOT_TOKEN=
+N8N_URL=http://localhost:5678
+# Xdebug Configuration
+XDEBUG_MODE=debug
+XDEBUG_CLIENT_HOST=host.docker.internal
+XDEBUG_CLIENT_PORT=9003
+XDEBUG_START_WITH_REQUEST=yes
+XDEBUG_IDEKEY=PHPSTORM
